feat: add split intent routing experiment